@@ -3,6 +3,7 @@
 - Impoved load balancing for part boundary adapt
 - Fixed edge-based primitive logic
 - add grid inflation for sonic boom grids
+- renamed convert to ref_translate
 
 Wed Sep 12, 2012 : Released Refine 1.8.8
 
